deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cluster-sample
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book-pod
  type: ClusterIP
  ports:
    - targetPort: 8081
      port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-deployment
spec:
  selector:
    matchLabels:
      app: book-pod
  template:
    metadata:
      labels:
        app: book-pod
    spec:
      containers:
        - name: book-container
          image: huyto000/booklisting:4.0.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: film-service
spec:
  selector:
    app: film-pod
  type: ClusterIP
  ports:
    - targetPort: 8082
      port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-deployment
spec:
  selector:
    matchLabels:
      app: film-pod
  template:
    metadata:
      labels:
        app: film-pod
    spec:
      containers:
        - name: film-container
          image: huyto000/filmlisting:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-pod
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  selector:
    matchLabels:
      app: gateway-pod
  template:
    metadata:
      labels:
        app: gateway-pod
    spec:
      containers:
        - name: gateway-container
          image: huyto000/gateway:5.0.0
          ports:
            - containerPort: 8080
